--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "gsap": "^3.6.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@types/gsap": "^3.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
